# dupless-video

./: .gitignore  CLAUDE.md  LICENSE  README.md  dupless-video.spec  pyproject.toml  requirements-gpu.txt  requirements.txt
.github/workflows/: tests.yml
config/: thresholds.yaml
docs/: BUILD_WINDOWS.md  DESIGN_v2_distributed.md  ENGINEERING_LOG.md  HPC_PIPELINE.md
install/windows/: beta-note.txt  dupless-video.iss  install.ps1
scripts/: app_entry.py  gen_labels.py  peta_scan_runner.py  profile_pass1.py  profile_pass2.py  reindex_full_subset.py  reindex_labeled.py  run_calibrate.py  vendor_bin.py  vendor_model.py
src/dupdetect/: __init__.py  cli.py  config.py  models.py  names.py  repair.py  runtime.py  tuning.py  util.py  watch.py
src/dupdetect/align/: audio.py  scenes.py  video.py
src/dupdetect/features/: audio_fp.py  embeddings.py  frames.py  hashing.py  probe.py  scenes.py
src/dupdetect/match/: cache.py  matcher.py  retrieval.py  tree.py
src/dupdetect/pipeline/: analyze.py  calibrate.py  fullscan.py  single.py
src/dupdetect/quality/: camrip.py  color.py  language.py
src/dupdetect/store/: __init__.py  schema.sql  store.py
src/dupdetect/ui/: __init__.py  actions.py  data.py  main.py  model.py  (+4 more)
tests/: test_align_video.py  test_audio.py  test_calibrate.py  test_cli.py  test_delete_prune.py  test_embeddings.py  test_frames.py  test_fullscan.py  test_name_copy.py  test_perf_opts.py  test_pipeline.py  test_probe.py  test_quality.py  test_repair.py  test_retrieval.py  test_runtime.py  test_scenes.py  test_startup.py  test_store.py  test_tree.py  test_ui.py  test_watch.py
tests/fixtures/: probe_avi_screener.json  probe_mkv_multiaudio.json  probe_mp4_dual.json
